Fix #23
There was a `.row` outside of a `container` causing the horizontal scroll
bar to show on the `home` content type.

--- a/_src/sass/partials/bands/_hero.scss
+++ b/_src/sass/partials/bands/_hero.scss
@@ -5,7 +5,6 @@
 	background-size: cover;
 	height: calc(100vh - 74px);
 	position: relative;
-	width: 100vw;
 	
 	.hero-center{
 		bottom: 0;
